# BankCore

./: README.md  api_spec.json
apps/: .description  CMakeLists.txt
apps/backend/: CMakeLists.txt
apps/backend/src/: main.cpp
apps/backend/src/api/: AccountController.cpp  AccountController.h
apps/backend/src/models/: Account.h
apps/backend/src/repositories/: AccountRepository.cpp  AccountRepository.h
apps/backend/src/services/: AccountService.cpp  AccountService.h
apps/backend/src/utils/: Money.h
apps/terminal-client/: CMakeLists.txt
apps/web-dashboard/: CMakeLists.txt
lib/: .description
libs/: .description
